@@ -3,13 +3,16 @@
 # Included by:
 #   ManageVarible
 #
-# Defines the following macros:
-#   STRING_APPEND(var str [separator])
-#     - Append a string to a variable
+# Defines the following functions:
+#   STRING_SPLIT(var delimiter str [NOESCAPE_SEMICOLON] [ESCAPE_VARIABLE])
+#     - Split a string into a list using a delimiter, 
+#       which can be in 1 or more characters long.
 #       * Parameters:
 #         + var: A variable that stores the result.
-#         + str: A string to be appended to end of line.
-#         + separator: Separator to separate between strings.
+#         + delimiter: To separate a string.
+#         + str: A string.
+#         + NOESCAPE_SEMICOLON: (Optional) Do not escape semicolons.
+#         + ESCAPE_VARIABLE (Optional) Escape variables.
 #
 #   STRING_TRIM(var str [NOUNQUOTE])
 #     - Trim a string by removing the leading and trailing spaces,
@@ -22,6 +25,14 @@
 #         + str: A string.
 #         + NOUNQUOTE: (Optional) do not remove the double quote mark
 #           around the string.
+#
+# Defines the following macros:
+#   STRING_APPEND(var str [separator])
+#     - Append a string to a variable
+#       * Parameters:
+#         + var: A variable that stores the result.
+#         + str: A string to be appended to end of line.
+#         + separator: Separator to separate between strings.
 #
 #   STRING_ESCAPE_SEMICOLON(var str)
 #     - Escape the semicolon
@@ -43,14 +54,6 @@
 #         + str_list: A list of string.
 #         + str: (Optional) more string to be join.
 #
-#   STRING_SPLIT(var delimiter str [NOESCAPE_SEMICOLON])
-#     - Split a string into a list using a delimiter, 
-#       which can be in 1 or more characters long.
-#       * Parameters:
-#         + var: A variable that stores the result.
-#         + delimiter: To separate a string.
-#         + str: A string.
-#         + NOESCAPE_SEMICOLON: (Optional) Do not escape semicolons.
 #
 
 IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
@@ -145,40 +148,42 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	STRING(REGEX REPLACE ";" "\\\\;" ${var} "${str}")
     ENDMACRO(STRING_ESCAPE_SEMICOLON var str)
 
-    # Internal macro
+    # Internal function
     # Nested Variable cannot be escaped here, as variable is already substituted
     # at the time it passes to this macro.
-    MACRO(_STRING_ESCAPE var str)
+    FUNCTION(_STRING_ESCAPE var str)
 	# ';' and '\' are tricky, need to be encoded.
 	# '#' => '#H'
 	# '\' => '#B'
 	# ';' => '#S'
+	# '$' => '#D'
 	SET(_NOESCAPE_SEMICOLON "")
-	SET(_NOESCAPE_HASH "")
+	SET(_ESCAPE_VARIABLE "")
 
 	FOREACH(_arg ${ARGN})
 	    IF(${_arg} STREQUAL "NOESCAPE_SEMICOLON")
 		SET(_NOESCAPE_SEMICOLON "NOESCAPE_SEMICOLON")
-	    ELSEIF(${_arg} STREQUAL "NOESCAPE_HASH")
-		SET(_NOESCAPE_HASH "NOESCAPE_HASH")
+	    ELSEIF(${_arg} STREQUAL "ESCAPE_VARIABLE")
+		SET(_ESCAPE_VARIABLE "ESCAPE_VARIABLE")
 	    ENDIF(${_arg} STREQUAL "NOESCAPE_SEMICOLON")
 	ENDFOREACH(_arg ${ARGN})
 
-	IF(_NOESCAPE_HASH STREQUAL "")
-	    STRING(REGEX REPLACE "#" "#H" _ret "${str}")
-	ELSE(_NOESCAPE_HASH STREQUAL "")
-	    SET(_ret "${str}")
-	ENDIF(_NOESCAPE_HASH STREQUAL "")
+	STRING(REGEX REPLACE "#" "#H" _ret "${str}")
 
 	STRING(REGEX REPLACE "\\\\" "#B" _ret "${_ret}")
+
+	IF(NOT _ESCAPE_VARIABLE STREQUAL "")
+	    STRING(REGEX REPLACE "$" "#D" _ret "${_ret}")
+	ENDIF(NOT _ESCAPE_VARIABLE STREQUAL "")
+
 	IF(_NOESCAPE_SEMICOLON STREQUAL "")
 	    STRING(REGEX REPLACE ";" "#S" _ret "${_ret}")
 	ENDIF(_NOESCAPE_SEMICOLON STREQUAL "")
 	#MESSAGE("_STRING_ESCAPE:_ret=${_ret}")
-	SET(${var} "${_ret}")
-    ENDMACRO(_STRING_ESCAPE var str)
+	SET(${var} "${_ret}" PARENT_SCOPE)
+    ENDFUNCTION(_STRING_ESCAPE var str)
 
-    MACRO(_STRING_UNESCAPE var str)
+    FUNCTION(_STRING_UNESCAPE var str)
 	# '#B' => '\'
 	# '#H' => '#'
 	# '#D' => '$'
@@ -210,9 +215,9 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	    STRING(REGEX REPLACE "#D" "$" _ret "${_ret}")
 	ENDIF(NOT _ESCAPE_VARIABLE STREQUAL "")
 	STRING(REGEX REPLACE "#H" "#" _ret "${_ret}")
-	SET(${var} "${_ret}")
+	SET(${var} "${_ret}" PARENT_SCOPE)
 	#MESSAGE("*** _STRING_UNESCAPE: ${var}=${${var}}")
-    ENDMACRO(_STRING_UNESCAPE var str)
+    ENDFUNCTION(_STRING_UNESCAPE var str)
 
     MACRO(STRING_UNQUOTE var str)
 	SET(_ret "${str}")
@@ -261,12 +266,12 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	SET(_result -1)
 	WHILE(_index LESS _str_end)
 	    STRING(SUBSTRING "${str}" ${_index} ${_search_len} _str_window)
-	    IF("${_str_window}" STREQUAL "${search_str}")
+	    IF(_str_window STREQUAL search_str)
 		SET(_result ${_index})
 		BREAK()
-	    ELSE("${_str_window}" STREQUAL "${search_str}")
+	    ELSE(_str_window STREQUAL search_str)
 		MATH(EXPR _index ${_index}+1)
-	    ENDIF("${_str_window}" STREQUAL "${search_str}")
+	    ENDIF(_str_window STREQUAL search_str)
 	ENDWHILE(_index LESS _str_end)
 	SET(${var} ${_result} PARENT_SCOPE)
     ENDFUNCTION(STRING_FIND var str search)
@@ -289,7 +294,7 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	ENDIF(_index EQUAL -1)
     ENDFUNCTION(STRING_SPLIT_2 var str_remain delimiter str)
 
-    MACRO(STRING_SPLIT var delimiter str)
+    FUNCTION(STRING_SPLIT var delimiter str)
 	#MESSAGE("***STRING_SPLIT: var=${var} str=${str}")
 	SET(_max_tokens "")
 	SET(_NOESCAPE_SEMICOLON "")
@@ -330,9 +335,10 @@ IF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 	ENDIF(NOT "x${_str}" STREQUAL "x")
 
 	# Unencoding
-	_STRING_UNESCAPE(${var} "${_str_list}" ${_NOESCAPE_SEMICOLON} ${_ESCAPE_VARIABLE})
+	_STRING_UNESCAPE(_var "${_str_list}" ${_NOESCAPE_SEMICOLON} ${_ESCAPE_VARIABLE})
 	#MESSAGE("***STRING_SPLIT: tokens=${${var}}")
-    ENDMACRO(STRING_SPLIT var delimiter str)
+	SET(${var} "${_var}" PARENT_SCOPE)
+    ENDFUNCTION(STRING_SPLIT var delimiter str)
 
 ENDIF(NOT DEFINED _MANAGE_STRING_CMAKE_)
 
