@@ -12,7 +12,7 @@ MESSAGE("CMAKE_MODULE_PATH=${CMAKE_MODULE_PATH}")
 
 MACRO(TEST_STR_MATCH var value)
     SET(_val "${${var}}")
-    IF(NOT "${value}" STREQUAL _val )
+    IF(NOT "${value}" STREQUAL "${_val}" )
 	MESSAGE(SEND_ERROR "  Error: ${var} = |${_val}| <> |${value}|")
     ENDIF()
 ENDMACRO()
